@@ -34,7 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
-* 
+* [mms] Fix javascript actions on the vacation page.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1076,7 +1076,7 @@
    <date>2012-07-06</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
-* 
+* [mms] Fix javascript actions on the vacation page.
    </notes>
   </release>
  </changelog>
