@@ -113,11 +113,15 @@ if (!empty($vac_rule['disable'])) {
 $form_title .= ' ' . Horde_Help::link('ingo', 'vacation');
 $form->setTitle($form_title);
 
+Horde::startBuffer();
+$form->renderActive(new Horde_Form_Renderer(array('encode_title' => false)), $vars, Horde::url('vacation.php'), 'post');
+$form_output = Horde::endBuffer();
+
 $menu = Ingo::menu();
 $page_output->header(array(
     'title' => _("Vacation Edit")
 ));
 echo $menu;
 Ingo::status();
-$form->renderActive(new Horde_Form_Renderer(array('encode_title' => false)), $vars, Horde::url('vacation.php'), 'post');
+echo $form_output;
 $page_output->footer();
