@@ -2,6 +2,7 @@
 v3.0.0beta1
 -----------
 
+[mms] Fix javascript actions on the vacation page.
 
 
 ------------
